--- a/platziVideoApp/package.json
+++ b/platziVideoApp/package.json
@@ -10,8 +10,8 @@
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-native-progress": "^3.5.0",
-    "react-native-vector-icons": "^6.1.0",
-    "react-native-video": "^4.3.1"
+    "react-native-vector-icons": "6.1.0",
+    "react-native-video": "4.3.1"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
