--- a/platziVideoApp/package.json
+++ b/platziVideoApp/package.json
@@ -11,7 +11,10 @@
     "react-native": "0.57.8",
     "react-native-progress": "^3.5.0",
     "react-native-vector-icons": "6.1.0",
-    "react-native-video": "4.3.1"
+    "react-native-video": "4.3.1",
+    "react-redux": "6.0.0",
+    "redux": "4.0.1",
+    "redux-persist": "5.10.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
