--- a/platziVideoApp/android/app/build.gradle
+++ b/platziVideoApp/android/app/build.gradle
@@ -148,6 +148,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-gesture-handler')
     compile project(':react-native-vector-icons')
     compile project(':react-native-video')
     implementation fileTree(dir: "libs", include: ["*.jar"])
