--- a/platziVideoApp/package.json
+++ b/platziVideoApp/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "react": "16.6.3",
     "react-native": "0.57.8",
+    "react-native-gesture-handler": "^1.0.12",
     "react-native-progress": "3.5.0",
     "react-native-vector-icons": "6.1.0",
     "react-native-video": "4.3.1",
+    "react-navigation": "^3.0.9",
     "react-redux": "6.0.0",
     "redux": "4.0.1",
     "redux-persist": "5.10.0"
