--- a/platziVideoApp/package.json
+++ b/platziVideoApp/package.json
@@ -14,6 +14,7 @@
     "react-native-vector-icons": "6.1.0",
     "react-native-video": "4.3.1",
     "react-navigation": "3.0.9",
+    "react-navigation-redux-helpers": "^2.0.9",
     "react-redux": "6.0.0",
     "redux": "4.0.1",
     "redux-persist": "5.10.0"
